tests/errors/type_mismatch_multiplication.dang
# Test multiplication type mismatch
pub result = "hello" * 42
